syntax = "proto3";

option csharp_namespace = "Inventory.Grpc.Contracts";

service ProductService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
}

message Product {
  string product_id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
  string details = 5;
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  Product product = 1;
}
